Footer overlaping issue fixed

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 html {
   font-size: 14px;
 }
+html, body{
+    height : 100%;
+}
 
 @media (min-width: 768px) {
   html {
